--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -18,9 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
-        android:alpha=".95"
+        android:alpha=".9"
         app:cardElevation="6dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/header_top_margin"
         app:cardBackgroundColor="@color/back_shade4"
         app:cardCornerRadius="20dp">
 
@@ -39,7 +39,7 @@
         android:layout_alignBottom="@+id/rl_stall"
         android:layout_marginLeft="12dp"
         android:layout_alignTop="@+id/rl_stall"
-        android:alpha=".95"
+        android:alpha=".9"
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
         android:layout_toRightOf="@+id/rl_stall"
@@ -94,7 +94,8 @@
         android:padding="16dp"
         android:scaleType="centerInside"
         android:src="@drawable/icon_pay"
-        android:tint="@color/back_shade6" />
+        android:tint="@color/back_shade6"
+        android:alpha="0.9"/>
 
 
     <TextView
