--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -14,10 +14,10 @@
 
 
     <android.support.v7.widget.CardView
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/header_top_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha=".95"
+        android:alpha=".9"
         app:cardElevation="6dp"
         android:layout_centerHorizontal="true"
         app:cardBackgroundColor="@color/back_shade4"
