--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -19,9 +19,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
-        android:alpha=".95"
+        android:alpha=".9"
         app:cardElevation="6dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/header_top_margin"
         app:cardBackgroundColor="@color/back_shade4"
         app:cardCornerRadius="20dp">
 
@@ -31,7 +31,7 @@
             android:layout_height="56dp"
             android:padding="10dp"
             android:src="@drawable/icon_stall"
-            android:tint="@color/shade3" />
+            android:tint="@color/back_shade6" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
@@ -40,7 +40,7 @@
         android:layout_alignBottom="@+id/rl_stall"
         android:layout_marginLeft="12dp"
         android:layout_alignTop="@+id/rl_stall"
-        android:alpha=".95"
+        android:alpha=".9"
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
         android:layout_toRightOf="@+id/rl_stall"
@@ -76,7 +76,8 @@
         android:padding="10dp"
         android:scaleType="centerInside"
         android:src="@drawable/cart"
-        android:tint="@color/shade3" />
+        android:tint="@color/back_shade6"
+        android:alpha="0.9"/>
 
 
     <RelativeLayout
@@ -104,8 +105,6 @@
             android:layout_below="@+id/tv_h1"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp" />
-
-
 
         <TextView
             android:id="@+id/tv_balance"
@@ -177,16 +176,6 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="10dp"
-            android:padding="5dp"
-            android:text="Filter"
-            android:textColor="#ffffff"
-            android:textSize="15sp" />
     </RelativeLayout>
 
     <ProgressBar
