--- a/app/src/main/res/layout/fragment_selected_sport.xml
+++ b/app/src/main/res/layout/fragment_selected_sport.xml
@@ -24,14 +24,14 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_events"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/header_top_margin"
         android:layout_marginBottom="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/rl_stall"
         android:layout_marginLeft="64dp"
         android:layout_alignTop="@+id/rl_stall"
-        android:alpha=".80"
+        android:alpha=".90"
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
         android:layout_toRightOf="@+id/rl_stall"
