--- a/app/src/main/res/layout/row_current_sport_athletic2.xml
+++ b/app/src/main/res/layout/row_current_sport_athletic2.xml
@@ -62,6 +62,14 @@
         android:layout_marginStart="12dp"
         >
 
+
+        <RelativeLayout
+            android:id="@+id/main"
+            android:layout_toLeftOf="@+id/icons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
         <RelativeLayout
             android:layout_marginTop="12dp"
             android:id="@+id/rl_title2"
@@ -98,11 +106,11 @@
             android:layout_height="1dp"
             android:background="@drawable/line_gradient"/>
 
-
         <RelativeLayout
-            android:visibility="visible"
-            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            android:layout_marginTop="0dp"
             android:layout_below="@id/view_12"
+            android:layout_marginBottom="6dp"
             android:id="@+id/rl_college"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -241,15 +249,12 @@
 
         </RelativeLayout>
 
-
-
-
-
         <RelativeLayout
             android:id="@+id/ll_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rl_college"
+            android:layout_marginBottom="12dp"
             >
 
 
@@ -260,45 +265,137 @@
             <!--android:layout_height="2dp"-->
             <!--/>-->
 
-            <LinearLayout
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="12dp"
-                android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content">
+            <!--<LinearLayout-->
+                <!--android:layout_marginTop="6dp"-->
+                <!--android:layout_marginBottom="12dp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_height="wrap_content">-->
 
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="6dp"
+                >
                 <TextView
-                    android:layout_gravity="center"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:id="@+id/tv_venue"
+                    android:layout_toStartOf="@id/divider_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="4dp"
-                    android:text="19:00"
+                    android:text="Sr Grounds"
                     android:textColor="#66627f"
-                    android:textSize="12sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:textColor="#66627f"
-                    android:textSize="25sp"
-                    android:layout_height="wrap_content"
-                    android:text=" | "/>
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
 
                 <TextView
-                    android:layout_gravity="center"
+                    android:id="@+id/divider_1"
+                    android:layout_toStartOf="@id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" | "
+                    android:textColor="@color/light_gray"
+                    android:textSize="25sp" />
+
+                <TextView
                     android:id="@+id/tv_time"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_time"
                     android:layout_centerHorizontal="true"
                     android:paddingTop="4dp"
-                    android:text="GYM G"
-                    android:textColor="#66627f"
-                    android:textSize="12sp" />
+                    android:text="11:00 pm"
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="12"/>
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/divider_2"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" | "
+                    android:textColor="@color/light_gray"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/divider_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="4dp"
+                    android:text="12th Sep"
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
+
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
+
+    </RelativeLayout>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/icons"
+            android:layout_width="40dp"
+            android:layout_alignBottom="@+id/main"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_centerVertical="true"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:tint="@color/light_gray"
+                android:src="@drawable/map_stad"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                />
+                <View
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:background="@drawable/line_gradient"
+                    />
+                <ImageView
+                    android:tint="@color/light_gray"
+                    android:src="@drawable/alarm_outline"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    />
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
