--- a/app/src/main/res/layout/row_current_sport_team2.xml
+++ b/app/src/main/res/layout/row_current_sport_team2.xml
@@ -178,43 +178,92 @@
             <!--android:layout_height="2dp"-->
             <!--/>-->
 
-            <LinearLayout
+            <!--<LinearLayout-->
+                <!--android:layout_marginTop="6dp"-->
+                <!--android:layout_marginBottom="12dp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_height="wrap_content">-->
+            <RelativeLayout
                 android:layout_marginTop="6dp"
-                android:layout_marginBottom="12dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content">
+                android:layout_marginBottom="12dp"
+                >
 
                 <TextView
-                    android:layout_gravity="center"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:id="@+id/tv_venue"
+                    android:layout_toStartOf="@id/divider_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="4dp"
-                    android:text="19:00"
+                    android:text="Sr Grounds"
                     android:textColor="#66627f"
-                    android:textSize="12sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:textColor="#66627f"
-                    android:textSize="25sp"
-                    android:layout_height="wrap_content"
-                    android:text=" | "/>
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
 
                 <TextView
-                    android:layout_gravity="center"
+                    android:id="@+id/divider_1"
+                    android:layout_toStartOf="@id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" | "
+                    android:textColor="@color/light_gray"
+                    android:textSize="25sp" />
+
+                <TextView
                     android:id="@+id/tv_time"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_time"
                     android:layout_centerHorizontal="true"
                     android:paddingTop="4dp"
-                    android:text="GYM G"
-                    android:textColor="#66627f"
-                    android:textSize="12sp" />
+                    android:text="11:00 pm"
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="12"/>
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/divider_2"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" | "
+                    android:textColor="@color/light_gray"
+                    android:textSize="25sp" />
 
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/divider_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="4dp"
+                    android:text="12th Sep"
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
+
+
+            </RelativeLayout>
         </RelativeLayout>
 
 
