--- a/app/src/main/res/layout/row_live_header.xml
+++ b/app/src/main/res/layout/row_live_header.xml
@@ -7,12 +7,12 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_events"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/header_top_margin"
         android:layout_marginBottom="@dimen/heading_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="64dp"
-        android:alpha=".80"
+        android:alpha=".90"
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
         app:cardBackgroundColor="@color/background2"
