--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -30,7 +30,7 @@
             android:layout_height="56dp"
             android:padding="10dp"
             android:src="@drawable/cart"
-            android:tint="@color/gold" />
+            android:tint="@color/back_shade6" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
