--- a/app/src/main/res/layout/row_wallet_history.xml
+++ b/app/src/main/res/layout/row_wallet_history.xml
@@ -6,11 +6,11 @@
     android:background="@color/back_shade2">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_margin="15dp"
-        android:src="@drawable/icon_pay_order" />
+        android:layout_margin="15dp" />
     <TextView
         android:id="@+id/tv_amount"
         android:layout_width="wrap_content"
@@ -19,20 +19,21 @@
         android:layout_marginEnd="15dp"
         android:layout_marginTop="15dp"
         android:text="+ 5.00"
-        android:textColor="#18FFFF"
         android:textSize="19sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"/>
 
 
+    <!--android:layout_alignTop="@id/iv_icon"-->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toStartOf="@+id/tv_amount"
         android:layout_toEndOf="@+id/iv_icon"
         android:orientation="vertical"
         android:gravity="center_vertical"
-        android:layout_alignTop="@id/iv_icon"
         android:layout_alignBottom="@id/iv_icon">
 
     <TextView
