--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.PhotoFragment"
     android:background="@color/background">
 
     <!--<com.github.chrisbanes.photoview.PhotoView-->
@@ -64,10 +63,46 @@
 
     </android.support.v7.widget.CardView>
 
+<!--<RelativeLayout-->
+    <!--android:layout_below="@id/card_events"-->
+    <!--android:layout_marginBottom="80dp"-->
+    <!--android:id="@+id/rl_login"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+    <!---->
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/rl_not_logged_in"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!---->
+        <!--<TextView-->
+            <!--android:id="@+id/tv_1"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="NOT LOGGED IN"-->
+            <!--android:textStyle="italic"-->
+            <!--android:textColor="@color/back_shade6"-->
+            <!--/>-->
+        <!--<TextView-->
+            <!--android:id="@+id/tv_2"-->
+            <!--android:layout_toEndOf="@id/tv_1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="LOGIN NOW"/>-->
+    <!--</RelativeLayout>-->
 
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/rl_logged_in"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!---->
+        <!---->
+    <!--</RelativeLayout>-->
+    <!---->
+<!--</RelativeLayout>-->
+    <!---->
   <LinearLayout
-      android:layout_marginBottom="80dp"
-      android:layout_below="@+id/card_events"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -115,6 +150,14 @@
 
 
       </android.support.v7.widget.CardView>
+      <ProgressBar
+          android:visibility="gone"
+          android:id="@+id/progressBar"
+          android:layout_width="80dp"
+          android:layout_height="80dp"
+          android:layout_centerInParent="true"
+          android:layout_marginTop="80dp"
+          />
 
   </LinearLayout>
     <!--<android.support.v7.widget.RecyclerView-->
