--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -63,46 +63,135 @@
 
     </android.support.v7.widget.CardView>
 
-<!--<RelativeLayout-->
-    <!--android:layout_below="@id/card_events"-->
-    <!--android:layout_marginBottom="80dp"-->
-    <!--android:id="@+id/rl_login"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-    <!---->
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/rl_not_logged_in"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-        <!---->
-        <!--<TextView-->
-            <!--android:id="@+id/tv_1"-->
-            <!--android:layout_marginStart="16dp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="NOT LOGGED IN"-->
-            <!--android:textStyle="italic"-->
-            <!--android:textColor="@color/back_shade6"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/tv_2"-->
-            <!--android:layout_toEndOf="@id/tv_1"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="LOGIN NOW"/>-->
-    <!--</RelativeLayout>-->
+    <RelativeLayout
+        android:id="@+id/rl_login"
+        android:layout_below="@id/card_events"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/rl_logged_in"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-        <!---->
-        <!---->
-    <!--</RelativeLayout>-->
-    <!---->
-<!--</RelativeLayout>-->
-    <!---->
+    <RelativeLayout
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:background="@drawable/border_shadow"
+        android:layout_marginBottom="4dp"
+        android:visibility="gone"
+        android:id="@+id/rl_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        >
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_profile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:cardCornerRadius="25dp"
+            >
+
+            <ImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+        </android.support.v7.widget.CardView>
+
+
+        <TextView
+            android:layout_marginEnd="12dp"
+            android:layout_toStartOf="@+id/tv_logout"
+            android:layout_marginStart="10dp"
+            android:id="@+id/tv_name"
+            android:layout_toEndOf="@id/card_profile"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/back_shade6"
+            android:padding="2dp"
+            android:text="Ayush Jhaveri"
+            android:maxLength="35"
+            android:maxLines="1"
+            android:textSize="15sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_marginStart="12dp"
+            android:id="@+id/tv_email"
+            android:maxLength="40"
+            android:maxLines="1"
+            android:padding="0dp"
+            android:layout_toEndOf="@id/card_profile"
+            android:layout_below="@id/tv_name"
+            android:textColor="@color/back_shade2"
+            android:text="f20170215@pilani.bits-pilani.ac.in"
+            android:textSize="11sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+            <!--<View-->
+                <!--android:layout_marginTop="12dp"-->
+                <!--android:layout_below="@id/tv_email"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="1dp"-->
+                <!--android:background="@drawable/line_gradient"/>-->
+
+        <TextView
+            android:background="@drawable/border_shadow_menu"
+            android:id="@+id/tv_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log out"
+            android:textSize="11sp"
+            android:padding="5dp"
+            android:layout_alignParentEnd="true"
+            />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:paddingTop="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:paddingBottom="12dp"
+        android:background="@drawable/border_shadow"
+        android:id="@+id/rl_please_login"
+        android:visibility="visible"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/iv_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_marginStart="12dp"
+            android:layout_toEndOf="@+id/iv_login"
+            android:id="@+id/tv_login"
+           android:layout_alignTop="@+id/iv_login"
+            android:gravity="center_vertical"
+            android:layout_alignBottom="@id/iv_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="* Please sign in\n   to participate"
+            android:textSize="9sp"
+            android:textColor="@color/back_shade2"
+            android:layout_centerHorizontal="true"/>
+
+
+    </RelativeLayout>
+
+    </RelativeLayout>
+
   <LinearLayout
+      android:layout_marginBottom="80dp"
+      android:layout_marginTop="12dp"
+      android:layout_below="@id/rl_login"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -150,14 +239,7 @@
 
 
       </android.support.v7.widget.CardView>
-      <ProgressBar
-          android:visibility="gone"
-          android:id="@+id/progressBar"
-          android:layout_width="80dp"
-          android:layout_height="80dp"
-          android:layout_centerInParent="true"
-          android:layout_marginTop="80dp"
-          />
+
 
   </LinearLayout>
     <!--<android.support.v7.widget.RecyclerView-->
@@ -172,6 +254,14 @@
         <!--/>-->
         <!--app:zoomage_minScale="0.6"-->
         <!--app:zoomage_maxScale="8"-->
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="80dp"
+        />
     <View
         android:layout_width="match_parent"
         android:layout_height="72dp"
