--- a/app/src/main/res/layout/layout_hover_icon.xml
+++ b/app/src/main/res/layout/layout_hover_icon.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.CardView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/back_shade4"
+        >
+
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="60dp"
+        android:layout_height="60dp">
         <ImageView
+            android:layout_centerInParent="true"
             android:id="@+id/baxter"
             android:layout_centerHorizontal="true"
             android:src="@drawable/baxter"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
             />
 
         <TextView
@@ -49,5 +57,6 @@
 
 
     </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
