--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -41,6 +41,9 @@
 
 
     <LinearLayout
+        android:paddingRight="15dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:id="@+id/ll_dots"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
